# fast-api-auth0-integration

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
deploy/docker/api/: Dockerfile
src/: app.py
src/api/v1/: routes.py
src/api/v1/controllers/: auth.py  base.py
src/core/: settings.py
src/domain/services/auth0/: authentication_service.py
src/schemas/auth0/: response_models.py
src/schemas/user/: user_model.py
src/tests/api/v1/controllers/: test_auth.py  test_base.py
