[tool.poetry]
name = "fast-api-auth0-integration"
version = "0.1.0"
description = ""
authors = ["Filipe Reynaud <reynaudfilipe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.85.0"
fastapi-utils = "0.2.1"
pytest = "7.2.0"
python-dotenv = "0.21.0"
requests = "2.28.1"
uvicorn = "0.18.3"
pre-commit = "^2.21.0"
yapf = "^0.32.0"
environs = "^9.5.0"
tenacity = "^8.1.0"
flake8 = "^6.0.0"
auth0-python = "^4.2.0"
pytest-mock = "^3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
